<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robert.firebasedemo.LogInActivity">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/bLogIn"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="logIn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="116dp" />

    <TextView
        android:text="@string/tvSendRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSendRegister"
        android:layout_marginBottom="16dp"
        android:onClick="sendRegister"
        android:layout_above="@+id/bLogIn"
        android:layout_alignEnd="@+id/bLogIn"
        android:clickable="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/etPasswordLogIn"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/tvSendRegister"
        android:layout_alignEnd="@+id/tvSendRegister" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/etEmailLogIn"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/etPasswordLogIn"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/user_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_above="@+id/etEmailLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/tvHeader" />
</RelativeLayout>
