<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robert.firebasedemo.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/bRegisterUser"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="register"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="116dp" />

    <TextView
        android:text="@string/tvSendLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSendLogIn"
        android:layout_marginBottom="16dp"
        android:onClick="sendLogIn"
        android:layout_above="@+id/bRegisterUser"
        android:layout_alignEnd="@+id/bRegisterUser"
        android:clickable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/etPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/tvSendLogIn"
        android:layout_alignEnd="@+id/tvSendLogIn" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/etEmail"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/etPassword"
        android:layout_alignParentStart="true" />
</RelativeLayout>
